--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,31 @@ body, html {
     align-items: center;
     justify-content: center;
     margin: 2rem 0;
+    font-size: 1.4rem;
+
+    button {
+        background-color: rgb(224, 122, 95);
+        padding: 0.3rem 0.5rem;
+        margin: 0.5rem;
+        font-size: 1.4rem;
+        font-family: 'Spectral', serif;
+        border-radius: 30px;
+        border-color: rgb(135, 61, 72);
+    }
+    button:hover {
+        background-color: rgb(135, 61, 72);
+    }
+    input {
+        font-size: 1.4rem;
+        padding: 0.5rem;
+        width: 40%;
+        border-color: rgb(135, 61, 72);
+        border-radius: 5px;
+        background-color: rgb(234, 234, 234);
+    }
+    input:hover, input:focus {
+        background-color: rgba(224, 122, 95, 0.5);
+    }
 }
 
 .note {
@@ -46,7 +71,7 @@ body, html {
     .content {
         margin: 0.25rem;
         padding: 0.3rem;
-        border: 0.1rem solid rgb(224, 122, 95);
+        border: 0.1rem solid rgb(135, 61, 72);
         font-size: 1.3rem;
     }
 }
