--- a/src/style.scss
+++ b/src/style.scss
@@ -69,7 +69,7 @@ body, html {
     .content {
         margin: 0.25rem;
         padding: 0.3rem;
-        //border: 0.1rem solid rgb(135, 61, 72);
+        border: 0.1rem solid rgb(135, 61, 72);
         font-size: 1.3rem;
     }
 }
